Expose destinationFloor in the read model (elevator-api)
Restores the old status endpoint's "targetFloor" -- gone since slice
1 (nothing could move yet), promised back "once there is a real
destination the API actually exposes" once slice 3 landed, which it
now has. Also fixes a real bug this surfaced: Representation.Builder
used Map.copyOf, which throws on a null value, and destinationFloor
is null exactly when the elevator isn't moving -- every representation
would have failed to build. Now uses an unmodifiable LinkedHashMap,
which tolerates null values the way this domain needs it to.

- elevator_view gains a nullable destination_floor column (V11).
- ElevatorStateNames gains destinationOf(ElevatorState), shared by
  ElevatorAggregateStore (already had an equivalent private method,
  now deleted) and the new ElevatorViewProjection.syncFrom write.
- ViewStatusController and MovementScheduler, plus the shared
  ElevatorRepresentations helper every command's controller already
  builds its response through, all include "destinationFloor" in
  the representations and SSE payloads they build.

Verified: full elevator-api test suite green (126 tests), and a live
boot + curl smoke test confirming destinationFloor is populated
during a real dispatch and cleared on arrival.